<resources>
    <string name="app_name">MyNews</string>
    <string name="search">Search</string>
    <string name="notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search_query_term">Search query term</string>
    <string name="art">Art</string>
    <string name="business">Business</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="sports">Sports</string>
    <string name="travel">Travel</string>
    <string name="politics">Politics</string>
    <string name="headline">Article Headline Here</string>
    <string name="notificationSwitch">Enable notifications (1x daily)</string>
    <string name="article_section">section here</string>
    <string name="article_subsection">subsection</string>
    <string name="image_view">article image</string>
    <string name="search_term_required">Please enter a search term.</string>
    <string name="hint_date">date_here</string>
    <string name="confirm_search_saved">Your notifications preference has been saved!</string>
    <string name="channel_name">channelMain</string>
    <string name="channel_description">channelMain</string>
    <string name="notify_user_no_articles_found">Your daily search did not return any articles.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>

</resources>
