<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:textColorHint="@android:color/darker_gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:hint="@string/search_query_term"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    tools:targetApi="lollipop" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/dateRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputSearch">

                <TextView
                    android:id="@+id/tvStart"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/start_date"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tvEnd"
                    style="@android:style/Widget.Holo.Spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:calendarViewShown="false"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/end_date"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dateRow"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/art"
                    tools:targetApi="lollipop" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/business"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/entrepreneurs"
                    tools:targetApi="lollipop" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/politics"
                    tools:targetApi="lollipop" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/row3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row2"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sports"
                    app:buttonTint="@color/colorPrimary" />

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/check6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/travel"
                    app:buttonTint="@color/colorPrimary" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/row3"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/search"
                android:textColor="@android:color/white"
                tools:targetApi="lollipop" />

            <Switch
                android:id="@+id/notificationSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnSubmit"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/notificationSwitch" />
        </RelativeLayout>
</ScrollView>