<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/miBackPress"
        android:icon="@drawable/ic_back"
        android:title=""
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/miSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/miHelp"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="withText">

    </item>
    <item
        android:id="@+id/miAbout"
        android:icon="@drawable/ic_about"
        android:title="@string/about"
        app:showAsAction="withText">
    </item>
</menu>